client-side validation eklendi, identity optionlar program.cs ye eklendi ve extensiona taşındı

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -8,6 +8,11 @@
 
     <ItemGroup>
       <Folder Include="DataAccess\" />
+      <Folder Include="Extensions\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
