--- a/NetCoreIdentityApp/NetCoreIdentityApp.csproj
+++ b/NetCoreIdentityApp/NetCoreIdentityApp.csproj
@@ -27,6 +27,7 @@
       <Folder Include="Areas\Admin\Controllers\" />
       <Folder Include="Areas\Admin\Data\" />
       <Folder Include="Areas\Admin\Views\Home\" />
+      <Folder Include="Views\Member\" />
     </ItemGroup>
 
     <ItemGroup>
