--- a/NetCoreIdentityApp/appsettings.Development.json
+++ b/NetCoreIdentityApp/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+  "EmailSettings":{
+    "Host": "smtp.gmail.com",
+    "Password": "mieehdzalovzlxun",
+    "Email": "karacaalper806@gmail.com"
+  },
+  "ConnectionStrings": {
+    "SqlCon": "Server=localhost,1433;Database=IdentityDb;User Id=sa;Password=macbook/M2Air;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
