--- a/NetCoreIdentityApp/NetCoreIdentityApp.csproj
+++ b/NetCoreIdentityApp/NetCoreIdentityApp.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
         <PrivateAssets>all</PrivateAssets>
@@ -27,6 +28,7 @@
       <Folder Include="Areas\Admin\Controllers\" />
       <Folder Include="Areas\Admin\Data\" />
       <Folder Include="Areas\Admin\Views\Home\" />
+      <Folder Include="Areas\Admin\Views\Roles\" />
       <Folder Include="Views\Member\" />
       <Folder Include="wwwroot\userpictures\" />
     </ItemGroup>
