--- a/NetCoreIdentityApp/appsettings.Development.json
+++ b/NetCoreIdentityApp/appsettings.Development.json
@@ -5,7 +5,7 @@
     "Email": "karacaalper806@gmail.com"
   },
   "ConnectionStrings": {
-    "SqlCon": "Server=localhost,1433;Database=IdentityDb;User Id=sa;Password=macbook/M2Air;TrustServerCertificate=True;"
+    "SqlCon": "Server=localhost,1433;Database=IdentityDb;User Id=sa;Password=macbook/M2;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
