--- a/NetCoreIdentityApp/NetCoreIdentityApp.csproj
+++ b/NetCoreIdentityApp/NetCoreIdentityApp.csproj
@@ -29,6 +29,7 @@
       <Folder Include="Areas\Admin\Data\" />
       <Folder Include="Areas\Admin\Views\Home\" />
       <Folder Include="Areas\Admin\Views\Roles\" />
+      <Folder Include="Requirements\" />
       <Folder Include="Views\Member\" />
       <Folder Include="wwwroot\userpictures\" />
     </ItemGroup>
