permission bazlı yetkilendirme eklendi

--- a/NetCoreIdentityApp/NetCoreIdentityApp.csproj
+++ b/NetCoreIdentityApp/NetCoreIdentityApp.csproj
@@ -30,6 +30,7 @@
       <Folder Include="Areas\Admin\Views\Home\" />
       <Folder Include="Areas\Admin\Views\Roles\" />
       <Folder Include="Views\Member\" />
+      <Folder Include="Views\Order\" />
       <Folder Include="wwwroot\userpictures\" />
     </ItemGroup>
 
