--- a/NetCoreIdentityApp.Service/NetCoreIdentityApp.Service.csproj
+++ b/NetCoreIdentityApp.Service/NetCoreIdentityApp.Service.csproj
@@ -10,4 +10,9 @@
       <ProjectReference Include="..\NetCoreIdentityApp.DataAccess\NetCoreIdentityApp.DataAccess.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+    </ItemGroup>
+
 </Project>
